Rust Homework 2 Added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ path = "src/rust_homework1/rust_homework1.rs"
 [[bin]]
 name = "bootcamp_homework2"
 path = "src/bootcamp_homework2/bootcamp_homework2.rs"
+
+[[bin]]
+name = "rust_homework2"
+path = "src/rust_homework2/rust_homework2.rs"
